--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,23 +1,28 @@
 .home {
   width: 100%;
-  height: 92vh;
+  min-height: 92vh;
 }
-.homeCards {
+
+.homePage {
   width: 95%;
   margin: auto;
-  height: inherit;
+  min-height: 90vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.homeCards {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  gap: 30px;
+  margin-bottom: 30px;
 }
-.homePage {
-  height: inherit;
-  display: flex;
-  align-items: center;
-  margin: 0 2rem;
-}
+
 .btnR {
   width: 30px;
   height: 50px;
@@ -42,16 +47,33 @@
 .btnL:active {
   transform: scale(0.98) translate(3px, 3px);
 }
-.homeNumber {
-  position: fixed;
-  right: 50px;
-  top: 10vh;
-  color: white;
-}
+
 .homeFilters {
   width: 100%;
   display: flex;
   justify-content: center;
   gap: 10px;
   margin-top: -10px;
+}
+.pagination {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  gap: 20px;
+  font-size: 20px;
+}
+
+.active {
+  color: rgb(155, 4, 4);
+  text-decoration: underline;
+  cursor: pointer;
+  font-weight: bold;
+  margin: 0 5px;
+}
+.desActive {
+  font: bold;
+  cursor: pointer;
+  margin: 0 5px;
 }
