--- a/src/components/Login/Register.module.css
+++ b/src/components/Login/Register.module.css
@@ -1,7 +1,11 @@
 .register {
-  width: 80%;
-  margin: 0 auto;
-  font-size: 14px;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
 }
 .register input {
   width: 100%;
@@ -12,4 +16,16 @@
 }
 .register button:active {
   transform: scale(0.98);
+}
+
+.form {
+  width: 400px;
+  height: 200px;
+  background-color: var(--color-primary);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 10px;
+  gap: 20px;
+  border-radius: 20px;
 }
