--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ body {
   width: 100%;
   min-height: 100vh;
   background-color: var(--color-secondary);
-  background-image: url("countries.png");
+  background-image: url("https://res.cloudinary.com/dy5egarlo/image/upload/countries_odywmf");
   background-size: cover;
   background-repeat: no-repeat;
 }
